🐛 #19 fix scrollbar issue

--- a/SCSS/_blocks/_workspace/_scrollbar.scss
+++ b/SCSS/_blocks/_workspace/_scrollbar.scss
@@ -2,3 +2,9 @@
   width: 2px;
   background-color: var(--main-background);
 }
+
+.workspace-split.mod-vertical.mod-root::-webkit-schollbar,
+::-webkit-schollbar {
+  -webkit-border-radius: 0;
+  border-radius: 0;
+}
